# wave-equation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: debug.hpp  engine.hpp  pipeline.hpp  shader.hpp  types.hpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/base/: frag.glsl  vert.glsl
shaders/compute/: derivative.glsl  wave.glsl
src/: engine.cpp  pipeline.cpp  shader.cpp
